Move additional vars to this repo

--- a/ci/vars.yml
+++ b/ci/vars.yml
@@ -1,3 +1,6 @@
 base-image: ubuntu
 base-image-tag: "22.04"
+image-repository: git-resource
 oci-build-params: {}
+src-repo: concourse/git-resource
+src-target-branch: master
